--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>風塵卜卜</title>
+    <title>𝟮𝟬𝟮𝟲 雨山祭｜解答之徑</title>
     <style>
         /* CSS 保持不變，略過 */
         html, body {
@@ -321,7 +321,6 @@
             if (navigator.share) {
                 navigator.share({
                     title: '風塵卜卜：我的命運結果',
-                    text: '快來測測你的命運之聲！',
                     url: window.location.href, 
                 }).catch(() => {});
             } else {
